--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # #
 
 # Basic
-name:               "Kiko"
+name:               "embc"
 
 # URL
 baseurl:            "http://bigdatalib.github.io/Kiko/"
